2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_signal.py: Update tests to deal with automatic
	registration.

	* examples/gobject/signal.py: Update example to not call
	gobject.type_register anymore.

	* gobject/pygobject.c: Add PyGObject_MetaType impl.
	(pygobject_register_class): Set the metaclass of new types to
	&PyGObject_MetaType.

	* gobject/gobjectmodule.c (pyg_type_register): split in two
	functions; one (pyg_type_register) that does all the work and
	return 0 on success or -1 on error; the other one
	( _wrap_pyg_type_register ) does the python argument parsing and
	calls the first one.
	(initgobject): Register the new PyGObject_MetaType type, which is
	a metaclass that automatically registers user defined GObject
	subclasses.

	Fixes #128765: GObject metaclass.

2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c: Wrap g_markup_escape_text. Fixes #164665.

	* gtk/gtk.defs: Add gtk.EntryCompletion.get_text_column.
	Patch by Gian Mario Tagliaretti.

	* gtk/gdk.defs (save_to_callback): Add.

	* gtk/gdk.override (_wrap_gdk_pixbuf_save_to_callback): Wrap
	gdk_pixbuf_save_to_callback.  Fixes #172445.

	* gobject/pygiochannel.c: Add; implements GIOChannel wrappers.
	Fixes #139176: GIOChannel wrapper.

	* gobject/gobjectmodule.c (initgobject): Register IOChannel type
	and some constants.

	* gtk/gdk.defs: Add functions notify_startup_complete,
	get_display_arg_name, get_program_class, set_program_class, and
	get_display.  Fixes #167412.

2005-05-22   Tim Evans  <t.evans@aranz.com>

	* gtk/gtktreeview.override
	(_wrap_gtk_tree_view_map_expanded_rows): Don't unref borrowed
	reference data.user_data.  Reviewed by Gustavo Carneiro; Fixes
	#165373 (crash due to extra Py_XDECREF in
	gtk.TreeView.map_expanded_rows)

2005-05-17  Manish Singh  <yosh@gimp.org>

	* gobject/pygparamspec.c (pyg_param_spec_getattr): make it build
	again (missing })

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>
