@@ -1,3 +1,10 @@
+2005-05-25  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
+
+	* examples/gtk/widget.py (PyGtkWidget.do_realize): move_resize()
+	window here as well.
+	(PyGtkWidget.do_expose_event): Fix rectangle coordinates.
+	(frame): Put custom widget in a frame (Christian Kirbach).
+
 2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* tests/test_signal.py: Update tests to deal with automatic
